# data_downloader

./: .env_pgadmin  .env_timescale  .gitignore  DB_commands.txt  Dockerfile  README.md  config.yaml  docs_wip.md  influx_docker-compose.yaml  main.py  makefile  pyproject.toml  timescale_docker-compose.yaml
data_downloader/: config.py  data_downloader.py  data_provider.py  db_cli.py  db_cmds.py  db_commands.py  db_vars.py  fred_extension.py  helper.py  main.py  timescale.py  utils.py  utils_cli.py  yahoo.py
data_downloader/files/: .env  sp500_stocks_05112021.csv
docker/: .env_pgadmin  .env_timescale  Dockerfile
docker-compose/: timescale_docker-compose.yaml
docker_compose/: .env_pgadmin  .env_timescale
files/: indices.csv  macro.csv  sp500_stocks_05112021.csv
files/dev/: .env
