[tool.poetry]
name = "data_downloader"
version = "0.1.0"
description = "stocks data downloader"
authors = ["Adam Yodinsky"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.64"
PyYAML = "^6.0"
influxdb-client = "^1.23.0"
influxdb = "^5.3.1"
munch = "^2.5.0"
python-dotenv = "^0.19.1"
psycopg2-binary = "^2.9.1"
vyper-config = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
