[tool.poetry]
name = "data_downloader"
version = "0.1.0"
description = "stocks data downloader"
authors = ["Adam Yodinsky"]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.1.64"
python-dotenv = "^0.19.1"
vyper-config = "^1.0.0"
click = "^8.1.3"
pandas = "^1.5.1"
psycopg2 = "^2.9.5"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
